[metadata]
name = py_mod
version = 0.0.1
description = easly make python module.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ido123net/py-mod
author = Ido Frenkel
author_email = ido123net@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    py-mod = py_mod.main:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults
omit = py_mod/resources/*

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
